add teacherleave and fix